--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+bar:
+  name: Bar
+  email: bar@bar.bar
+  encrypted_password: <%= Devise::Encryptor.digest User, 'testpassword' %>
 
-two:
-  name: MyString
+foo:
+  name: Foo
+  email: foo@foo.foo
+  encrypted_password: <%= Devise::Encryptor.digest User, 'testpassword' %>
